--- a/src/pages/styles/Question.css
+++ b/src/pages/styles/Question.css
@@ -121,7 +121,6 @@ header > div > h3 {
 }
 
 .flag-table-data {
-
 }    */
 
 
@@ -259,8 +258,9 @@ header > div > h3 {
         font-size: 12px;
         margin: 0px;
         margin-left: -24px;
-        margin-top: -1px;
+        margin-top: 0px;
     }
+
     .add-solution-btn {
         font-size: 24px;
     }
